hasqd/tests/coptest/usr/ab/hsl/neg/fid_hsl_ag_re.inp
ag report
ag report "a" "b"

quit
